--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "pugetsound-schools-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node dist/index.js"
   },
   "engines": {
     "node": "v11.12.0"
